# CTFSSI_2022

./: README.md  docker-compose.yml
cripto/: README.md
cripto/HASH_0/: README.md
cripto/HASH_1_sal/: README.md  hash.txt
cripto/HASH_2_combination/: README.md  hash.txt
cripto/RSA_0.1_Criptografar/: README.md  challenge.py  solution.py
cripto/RSA_0.2_Criptografar/: README.md  challenge.py  solution.py
cripto/RSA_0.2_Decriptografar/: .gitignore  README.md  challenge.py  solution.py
cripto/RSA_1_small_e/: 8292_primes.txt  README.md  challenge.py  solution.py
cripto/RSA_X_small_diff/: README.md  challenge.py  solution.py  teste.py
cripto/XOR_0_Criptografar_e_Decriptografar/: README.md  challenge.py  solution.py
cripto/XOR_1_1_byte/: README.md  create_challenge.py  solution.py
cripto/XOR_2_Short_Key/: README.md  criptografar.py  texto.txt  texto_criptografado.txt
cripto/XOR_2_one_time_pad/: README.md  challenge.py  flag.txt  rodar_no_server.py  solution.py  texto_criptografado.txt
cripto/XOR_3_one_time_pad/: .dockerignore  Dockerfile  (+6 more)
exploracao_binario/: SaboresDeUmaVulnerabilidade.md
forense/: README.md
misc/: BackupNaNuvem.md  CalculadoraPreguicosa.md  Calculadora_preguicosa.md  ZipSimbolico.md
redes/: A_calculadora_mais_rapida_do_Oeste.md  ProxyAberto.md
redes/UmLadinoNosFios/: CMakeLists.txt  Dockerfile  Makefile  README.md  flag.txt  map.txt
redes/UmLadinoNosFios/src/: client.cpp  map.cpp  map.hpp  net.cpp  net.hpp  server.cpp
teste/: Dockerfile  Makefile  README.md  teste.py
web/: ACalculadoraMaisRapidaDoOeste_versaoWeb.md
(+122 files in other folders)
